--- a/index.html
+++ b/index.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="donutClicker.css">
     <title>Donut Clicker</title>
   </head>
+
   <body>
-    <div class="container"></div>
-    <script src="./index.js"></script>
+    <header>
+    <nav id="navbar"> 
+      <button type="button" class="hide"> Fed Baking Company </button>
+        <div class="details">
+
+        </div>
+      <button type="button" class="hide"> Donut Maker Game </button>
+        <a href="#donut"></a>
+        <div class="details">
+
+      </div>
+        <button type="button" class="hide"> Contact </button>
+        <div class="details">
+
+        </div>
+    </nav>
+
+      <h1> Welcome to the "Fred the Baker Baking Company" </h1>
+  </header>
+
+  <div class="container">
+
+
+
+    <section class="donuts">
+      <p>No.Of Donut Created: </p>
+      <p id="number-donuts">  0  </p>
+      <h2>No of Donut Per Click</h2>
+      <p id="number-per-click">1</p>
+      <button id="donut-maker-button"> <img src="./images/dunkin-donut.jpg"></button>
+      <br><br>
+      
+    </section>
+
+
+
+    <section class="clicker">
+      <p>Auto Clicker: </p>
+      <p id="auto-clicker">  0  </p>
+      <h2>Auto Clicker Cost</h2>
+      <p id="clicker-cost"> 100</p>
+      <button id="auto-clicker-button"> AutoClicker</button>
+    </section>
+
+
+
+    <section class="multiplier">
+      <p>Multiplier: </p>
+      <p id="donut-multiplier">  0  </p>
+      <h2>Multiolier Cost</h2>
+      <p id="multiplier-cost">20</p>
+      <button id="donut-multiplier-button"> Multiplier</button>
+    </section>
+    <br>
+    <br>
+
+    <button id="reset-game">Reset Game</button>
+
+
+
+  </div>
+  <script src="./DonutMaker.js"></script>
+  <script src="./app.js"></script>
   </body>
 </html>
