--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@
 
         </div>
     </nav>
-
-      <h1> Welcome to the "Fred the Baker Baking Company" </h1>
+    <h1> Welcome to the "Fred the Baker Baking Company" </h1>
   </header>
 
   <div class="container">
-
-
 
     <section class="donuts">
       <p>No.Of Donut Created: </p>
@@ -44,8 +41,6 @@
       
     </section>
 
-
-
     <section class="clicker">
       <p>Auto Clicker: </p>
       <p id="auto-clicker">  0  </p>
@@ -54,24 +49,21 @@
       <button id="auto-clicker-button"> AutoClicker</button>
     </section>
 
-
-
     <section class="multiplier">
       <p>Multiplier: </p>
       <p id="donut-multiplier">  0  </p>
-      <h2>Multiolier Cost</h2>
+      <h2>Multiplier Cost</h2>
       <p id="multiplier-cost">20</p>
       <button id="donut-multiplier-button"> Multiplier</button>
     </section>
-    <br>
-    <br>
+    <br> <br>
 
     <button id="reset-game">Reset Game</button>
 
-
-
   </div>
+
   <script src="./DonutMaker.js"></script>
   <script src="./app.js"></script>
+
   </body>
 </html>
