updates on css file

--- a/index.html
+++ b/index.html
@@ -9,51 +9,57 @@
     <title>Donut Clicker</title>
   </head>
 
-  <body>
+  
     <header>
-    <nav id="navbar"> 
+    <nav class="navbar"> 
       <button type="button" class="hide"> Fed Baking Company </button>
         <div class="details">
-
+          <p>Fred the Baker Baking Company is tired of making real donuts and is ready to retire. He  help to keep his love of
+             donuts alive. He wants you to enjoy this game that user can create virtual donuts for the world 
+             to enjoy.</p>
         </div>
-      <button type="button" class="hide"> Donut Maker Game </button>
-        <a href="#donut"></a>
-        <div class="details">
 
+      <button type="button" class="hide"> Inspiration </button>
+      <div class="details"></div>
+        <a href="https://orteil.dashnet.org/cookieclicker/"></a>
       </div>
+
         <button type="button" class="hide"> Contact </button>
         <div class="details">
-
+          <p>Consistently recognized for superior  problem-solving skills, strong work ethic and passion for serving others at Amazon. Highly motivated and learning oriented candidate reskilling to switch careers into software development. 
+          </p>
+          <a href="https://github.com/cmsrimsson">Github</a>
+          <a href="https://www.linkedin.com/in/chuda-rimal-318b33201/">Linkedin</a>
         </div>
     </nav>
+
     <h1> Welcome to the "Fred the Baker Baking Company" </h1>
   </header>
-
+<body>
   <div class="container">
 
     <section class="donuts">
-      <p>No.Of Donut Created: </p>
-      <p id="number-donuts">  0  </p>
-      <h2>No of Donut Per Click</h2>
+      <h2>No.Of Donut Created: <p id="number-donuts">  0  </p></h2>
+      
+      <p>Donut Per Click</p>
       <p id="number-per-click">1</p>
       <button id="donut-maker-button"> <img src="./images/dunkin-donut.jpg"></button>
       <br><br>
-      
-    </section>
+      </section>
 
     <section class="clicker">
-      <p>Auto Clicker: </p>
+      <h2>Auto Clicker: </h2>
       <p id="auto-clicker">  0  </p>
-      <h2>Auto Clicker Cost</h2>
+      <p>Auto Clicker Cost</p>
       <p id="clicker-cost"> 100</p>
       <button id="auto-clicker-button"> AutoClicker</button>
     </section>
 
     <section class="multiplier">
-      <p>Multiplier: </p>
+      <h2>Multiplier: </h2>
       <p id="donut-multiplier">  0  </p>
-      <h2>Multiplier Cost</h2>
-      <p id="multiplier-cost">20</p>
+      <p>Multiplier Cost</p>
+      <p id="multiplier-cost"> 20 </p>
       <button id="donut-multiplier-button"> Multiplier</button>
     </section>
     <br> <br>
