--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
       <button type="button" class="hide"> Inspiration </button>
-      <div class="details"></div>
+      <div class="details">
         <a href="https://orteil.dashnet.org/cookieclicker/"></a>
       </div>
 
@@ -39,8 +39,8 @@
   <div class="container">
 
     <section class="donuts">
-      <h2>No.Of Donut Created: <p id="number-donuts">  0  </p></h2>
-      
+      <h2>No.Of Donut Created: </h2>
+      <p id="number-donuts">  0  </p>
       <p>Donut Per Click</p>
       <p id="number-per-click">1</p>
       <button id="donut-maker-button"> <img src="./images/dunkin-donut.jpg"></button>
