--- a/index.html
+++ b/index.html
@@ -12,29 +12,36 @@
   
     <header>
     <nav class="navbar"> 
+
       <button type="button" class="hide"> Fed Baking Company </button>
         <div class="details">
           <p>Fred the Baker Baking Company is tired of making real donuts and is ready to retire. He  help to keep his love of
              donuts alive. He wants you to enjoy this game that user can create virtual donuts for the world 
              to enjoy.</p>
+             <button id="reset">Go Back</button>
         </div>
 
-      <button type="button" class="hide"> Inspiration </button>
-      <div class="details">
-        <a href="https://orteil.dashnet.org/cookieclicker/"></a>
+      <button type="button" class="hide1"> Inspiration </button>
+      <div class="details1">
+        <p>CLick this link to play famous cookieclicker game: </p>
+          <a href="https://orteil.dashnet.org/cookieclicker/"> CookieClikerGame</a><br><br>
+          <button id="resetI">Go Back</button>
       </div>
 
-        <button type="button" class="hide"> Contact </button>
-        <div class="details">
+        <button type="button" class="hide2"> Contact </button>
+        <div class="details2">
           <p>Consistently recognized for superior  problem-solving skills, strong work ethic and passion for serving others at Amazon. Highly motivated and learning oriented candidate reskilling to switch careers into software development. 
           </p>
-          <a href="https://github.com/cmsrimsson">Github</a>
-          <a href="https://www.linkedin.com/in/chuda-rimal-318b33201/">Linkedin</a>
+          <a href="https://github.com/cmsrimsson">Github</a><br><br>
+          <a href="https://www.linkedin.com/in/chuda-rimal-318b33201/">Linkedin</a><br><br>
+          <button id="resetC">Go Back</button>
         </div>
     </nav>
 
     <h1> Welcome to the "Fred the Baker Baking Company" </h1>
+    
   </header>
+
 <body>
   <div class="container">
 
@@ -45,7 +52,7 @@
       <p id="number-per-click">1</p>
       <button id="donut-maker-button"> <img src="./images/dunkin-donut.jpg"></button>
       <br><br>
-      </section>
+    </section>
 
     <section class="clicker">
       <h2>Auto Clicker: </h2>
@@ -65,6 +72,10 @@
     <br> <br>
 
     <button id="reset-game">Reset Game</button>
+    </div>
+    
+    <div>
+<footer>&copy cmsrimsson, WCCI-2022</footer>
 
   </div>
 
